# report_parser

./: .gitignore  README.md  classes.py  config.json  crawl4reports.ipynb  pdfscraper.py  pyproject.toml  reportparser.py  tests.ipynb
